fix spacing testimonial section

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -276,6 +276,9 @@ img {
   bottom: 40px;
   color: #ffffff;
 }
+.projects .container .projects-slider img {
+  height: 50vh;
+}
 
 .cta {
   background-image: url("../images/CTA.png");
@@ -303,6 +306,13 @@ img {
 }
 .testimonials .testimonial-card .testimonial-flex {
   display: flex;
+  align-items: center;
+}
+.testimonials .testimonial-card .testimonial-flex p {
+  padding-left: 15px;
+}
+.testimonials .testimonial-card .testimonial-quote {
+  padding-top: 20px;
 }
 
 .blog {
@@ -570,6 +580,12 @@ img {
   }
   .testimonials .testimonial-content h2 {
     padding: 25px 0px 35px 0px;
+  }
+  .testimonials .testimonial-card {
+    padding: 40px 57px 77px 40px;
+  }
+  .testimonials .testimonial-card .testimonial-quote {
+    padding-top: 43px;
   }
   .blog {
     padding: 90px 0px 100px 0px;
