--- a/src/scss/_responsive-media.scss
+++ b/src/scss/_responsive-media.scss
@@ -169,6 +169,12 @@
         padding: 25px 0px 35px 0px;
       }
     }
+    .testimonial-card {
+      padding: 40px 57px 77px 40px;
+      .testimonial-quote {
+        padding-top: 43px;
+      }
+    }
   }
   .blog {
     padding: 90px 0px 100px 0px;
